--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
