--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "howler": "^2.2.3",
